--- a/movie/templates/base.html
+++ b/movie/templates/base.html
@@ -17,7 +17,9 @@
 </div> 
 <ul class="nav navbar-nav"> 
 <li><a href="{% url 'movies' %}"> Movies</a></li>
-<li>Dummy</li> 
+<li><a href="{% url 'newreview' %}">Add Review </a></li>
+<li><a href="{% url 'login' %}">Login </a></li>
+<li><a href="{% url 'logout' %}">Logout </a></li> 
 </ul> 
 </div> 
 </nav> 
